--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ header button#menuBt {
   border: none;
   position: absolute;
   left: 6%;
+  display: none;
 }
 header a {
   position: relative;
@@ -202,6 +203,7 @@ main section:nth-child(5) {
     width: 100%;
   }
   header button#menuBt {
+    display: block;
     z-index: 1;
   }
   header nav {
@@ -216,6 +218,18 @@ main section:nth-child(5) {
   header nav a {
     color: hsl(0, 0%, 0%);
     font-weight: 600;
+  }
+  header nav::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 100%;
+    height: 100vh;
+    background-color: hsl(0, 0%, 0%);
+    z-index: 1;
+    opacity: 50%;
   }
   main {
     display: grid;
