--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,7 @@ header{
         border: none;
         position: absolute;
         left: 6%;
+        display: none;
     }
     a{
         position: relative;
@@ -233,6 +234,7 @@ main{
         justify-content: center;
         width: 100%;
         button#menuBt{
+            display: block;
             z-index: 1;
         }
         nav{
@@ -248,18 +250,18 @@ main{
             font-weight: 600;
             }
 
-            // &::before{
-            //     content: "";
-            //     position: absolute;
-            //     left: 0;
-            //     right: 0;
-            //     bottom: 0;
-            //     top: 100%;
-            //     height: 100vh;
-            //     background-color: $black;
-            //     z-index: 1;
-            //     opacity: 50%;
-            // }
+            &::before{
+                content: "";
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                top: 100%;
+                height: 100vh;
+                background-color: $black;
+                z-index: 1;
+                opacity: 50%;
+            }
         }
     }
     
